--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="contenu-section">
     <div class="officiel">
       <div class="bloc-france">
-        <img class="marianne" src="/assets/images/marianne-dark.svg">
+        <img class="marianne" src="/assets/images/marianne-dark.svg" alt="Logo République Française">
       </div>
       <div class="info-msc">
         <p>MesServicesCyber est la plateforme pour faciliter l’accès de tous aux solutions de l’ANSSI et de ses partenaires.</p>
