--- a/_includes/action-parcours-avec-items.html
+++ b/_includes/action-parcours-avec-items.html
@@ -3,7 +3,7 @@
         <div class="description">
             <h1>{{include.titre}}</h1>
             <p class="explication">{{include.explication}}</p>
-            <img class="illustration" src="/assets/images/illustration-{{include.id}}.svg"/>
+            <img class="illustration" src="/assets/images/illustration-{{include.id}}.svg" alt="Illustration {{include.titre}}"/>
         </div>
         <h2>Les services et ressources</h2>
         {% for idItem in include.items %}
