--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -489,7 +489,7 @@ header {
     flex-direction: column;
     gap: 12px;
 
-    h3 {
+    .nom-item {
       margin: 0;
       padding: 0;
       font-size: 0.875rem;
@@ -1000,7 +1000,7 @@ footer {
     box-sizing: border-box;
     gap: 8px;
 
-    h3 {
+    .nom-item {
       text-wrap: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
