--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       />
     </a>
 
-    <a href="/" class="titre-msc">
+    <a href="/" class="titre-msc fr-header__brand">
       <img class="logo-anssi" src="/assets/images/logo-anssi.svg" alt="Logo ANSSI"/>
       <div class="titre-site">
         <h1>MesServicesCyber <span class="beta">Bêta</span></h1>
