modif-wording-footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <img class="marianne" src="/assets/images/marianne-dark.svg">
       </div>
       <div class="info-msc">
-        <p>MesServicesCyber aide les entités publiques et régulées à évaluer leur maturité cyber (à compléter).</p>
+        <p>MesServicesCyber est la plateforme pour faciliter l’accès de tous aux solutions de l’ANSSI et de ses partenaires.</p>
         <p>Il est développé par l'<a href="https://cyber.gouv.fr/" target="_blank">Agence nationale de la sécurité des
           systèmes d'information</a>, en lien avec
           <a href="https://beta.gouv.fr/" target="_blank">BetaGouv</a> et
