--- a/_layouts/test-maturite.html
+++ b/_layouts/test-maturite.html
@@ -1,6 +1,15 @@
 ---
 layout: defaut
 style: /assets/styles/test-maturite.css
+balisesMeta:
+  - propriete: "og:title"
+    contenu: Test de maturité Cyber
+  - propriete: "og:image"
+    contenu: SITE_URL/images/test-maturite/test-maturite.png
+  - propriete: "og:description"
+    contenu: Obtenez en 5 minutes une évaluation indicative de la maturité cyber de votre organisation.
+  - propriete: "og:url"
+    contenu: SITE_URL/test-maturite/
 ---
 
 {{content}}
