--- a/assets/styles/boutons.scss
+++ b/assets/styles/boutons.scss
@@ -41,6 +41,7 @@
   padding: 16px 24px;
   font-size: 1rem;
   line-height: 1.5rem;
+  background: white;
 
   &.actif {
     background: var(--jaune-msc);
@@ -67,6 +68,12 @@
 
   &:active {
     background: var(--gris-secondaire-fond-clique);
+  }
+}
+
+.fond-sombre {
+  .bouton.secondaire {
+    background: transparent;
   }
 }
 
