--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -200,6 +200,7 @@ section {
         margin-top: 0;
       }
     }
+
     p {
       font-size: 1.125rem;
       line-height: 1.75rem;
@@ -425,6 +426,7 @@ section {
     &:nth-child(1) {
       animation-delay: 0.5s;
     }
+
     &:nth-child(2) {
       animation-delay: 1s;
     }
@@ -573,4 +575,40 @@ section {
 .note {
   font-style: italic;
   margin: 24px 0 16px;
+}
+
+.partage-test {
+  padding: 24px var(--gouttiere);
+
+  h2 {
+    margin-bottom: 8px;
+    font-size: 1.375rem;
+    line-height: 1.75rem;
+  }
+
+  p {
+    margin-bottom: 24px;
+  }
+
+  h3 {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    margin-bottom: 16px;
+  }
+
+  .boutons-partage {
+    padding: 8px;
+    display: flex;
+    gap: 16px;
+
+    a {
+      &:after {
+        display: none;
+      }
+    }
+
+    .bouton {
+      padding: 8px;
+    }
+  }
 }
