Corrige le survol des éléments qui ne sont pas des liens visuels
...Seuls ces liens visuels doivent être soulignés au survol. Le plus simple, car il y a trop d’exceptions, est de mettre en place une classe.

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -5,29 +5,32 @@
         <img class="marianne" src="/assets/images/marianne-dark.svg" alt="Logo République Française">
       </div>
       <div class="info-msc">
-        <p>MesServicesCyber est la plateforme pour faciliter l’accès de tous aux solutions de l’ANSSI et de ses partenaires.</p>
-        <p>Il est développé par l'<a href="https://cyber.gouv.fr/" target="_blank">Agence nationale de la sécurité des
+        <p>MesServicesCyber est la plateforme pour faciliter l’accès de tous aux solutions de l’ANSSI et de ses
+          partenaires.</p>
+        <p>Il est développé par l'<a href="https://cyber.gouv.fr/" class="lien" target="_blank">Agence nationale de la
+          sécurité des
           systèmes d'information</a>, en lien avec
-          <a href="https://beta.gouv.fr/" target="_blank">BetaGouv</a> et
-          la <a href="https://www.numerique.gouv.fr/dinum/">Direction interministérielle du numérique</a>.</p>
+          <a href="https://beta.gouv.fr/" class="lien" target="_blank">BetaGouv</a> et
+          la <a href="https://www.numerique.gouv.fr/dinum/" class="lien">Direction interministérielle du numérique</a>.
+        </p>
         <div class="liens-externes">
-          <a href="info.gouv.fr" target="_blank">info.gouv.fr</a>
-          <a href="service-public.fr" target="_blank"> service-public.fr</a>
-          <a href="legifrance.gouv.fr" target="_blank">legifrance.gouv.fr</a>
-          <a href="data.gouv.fr" target="_blank">data.gouv.fr</a>
+          <a href="info.gouv.fr" target="_blank" class="lien">info.gouv.fr</a>
+          <a href="service-public.fr" target="_blank" class="lien"> service-public.fr</a>
+          <a href="legifrance.gouv.fr" target="_blank" class="lien">legifrance.gouv.fr</a>
+          <a href="data.gouv.fr" target="_blank" class="lien">data.gouv.fr</a>
         </div>
       </div>
     </div>
     <div class="liens-internes">
-      <a href="#a">À propos</a>
+      <a href="#a" class="lien">À propos</a>
       <hr/>
-      <a href="#a">Mentions légales</a>
+      <a href="#a" class="lien">Mentions légales</a>
       <hr/>
-      <a href="#a">Politique de confidentialité</a>
+      <a href="#a" class="lien">Politique de confidentialité</a>
       <hr/>
-      <a href="#a">Conditions générales</a>
+      <a href="#a" class="lien">Conditions générales</a>
       <hr/>
-      <a href="#a">Statistiques d'utilisation</a>
+      <a href="#a" class="lien">Statistiques d'utilisation</a>
     </div>
   </div>
 </footer>
