Supprime le mot « parcours » des boutons

--- a/front/_includes/encart-nis2.html
+++ b/front/_includes/encart-nis2.html
@@ -3,7 +3,7 @@
     <div class="carte nis2">
       <img
               src="/assets/images/trouver-parcours.png"
-              alt="Illustration trouver parcours"
+              alt="Découvrir les services pour les entités régulées NIS2"
       />
       <h1>Votre entité est régulée NIS2 ?</h1>
       <p>Découvrez tous les services accessibles aux entités regulées NIS2</p>
