Corrige les liens du pied de page

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -14,10 +14,10 @@
           la <a href="https://www.numerique.gouv.fr/dinum/" class="lien">Direction interministérielle du numérique</a>.
         </p>
         <div class="liens-externes">
-          <a href="info.gouv.fr" target="_blank" class="lien">info.gouv.fr</a>
-          <a href="service-public.fr" target="_blank" class="lien"> service-public.fr</a>
-          <a href="legifrance.gouv.fr" target="_blank" class="lien">legifrance.gouv.fr</a>
-          <a href="data.gouv.fr" target="_blank" class="lien">data.gouv.fr</a>
+          <a href="https://info.gouv.fr" target="_blank" class="lien">info.gouv.fr</a>
+          <a href="https://service-public.fr" target="_blank" class="lien"> service-public.fr</a>
+          <a href="https://legifrance.gouv.fr" target="_blank" class="lien">legifrance.gouv.fr</a>
+          <a href="https://data.gouv.fr" target="_blank" class="lien">data.gouv.fr</a>
         </div>
       </div>
     </div>
