--- a/front/_includes/carte-item.html
+++ b/front/_includes/carte-item.html
@@ -15,7 +15,7 @@
     </figcaption>
   </figure>
   <div class="contenu">
-    <h3>{% if include.nomPerso %}{{include.nomPerso}}{% else %}{{item.nom}}{% endif %}</h3>
+    <div class="nom-item">{% if include.nomPerso %}{{include.nomPerso}}{% else %}{{item.nom}}{% endif %}</div>
     <span class="description">{% if include.descriptionPerso %}{{include.descriptionPerso}}{% else %}{{item.description}}{% endif %}</span>
     <div class="labels">
       {% for tag in include.tagsSpecifiques %}
