--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -5,8 +5,7 @@
         <img class="marianne" src="/assets/images/marianne-dark.svg" alt="Logo République Française">
       </div>
       <div class="info-msc">
-        <p>MesServicesCyber est la plateforme pour faciliter l’accès de tous aux solutions de l’ANSSI et de ses
-          partenaires.</p>
+        <p>MesServicesCyber est la plateforme pour faciliter l'accès de tous aux services et ressources de l'ANSSI et de ses partenaires.</p>
         <p>Il est développé par l'<a href="https://cyber.gouv.fr/" class="lien" target="_blank">Agence nationale de la
           sécurité des
           systèmes d'information</a>, en lien avec
