Affiche une zone d’identification pour l’utilisateur courant

--- a/front/_includes/header.html
+++ b/front/_includes/header.html
@@ -16,6 +16,15 @@
       </div>
     </a>
 
+    <script
+      type="module"
+      crossorigin
+      src="/lib-svelte/dist/assets/identification.js"
+    ></script>
+
+    <div id="zone-identification">
+    </div>
+
     <button class="ouverture-menu" id="menu-mobile-ouvrir">
       <img src="/assets/images/icone-menu.svg" alt="Menu burger"/>
     </button>
