Déplace la classe du header DSFR
... qui était présente en double, et donc non prise en compte

--- a/front/_includes/header.html
+++ b/front/_includes/header.html
@@ -1,4 +1,4 @@
-<header id="haut-de-page">
+<header id="haut-de-page" class="fr-header__brand">
   <div class="contenu-section">
     <a href="/">
       <img
@@ -8,7 +8,7 @@
       />
     </a>
 
-    <a href="/" class="titre-msc" aria-label="Retour à l’accueil" class="titre-msc fr-header__brand">
+    <a href="/" class="titre-msc" aria-label="Retour à l’accueil">
       <img class="logo-anssi" src="/assets/images/logo-anssi.svg" alt="Logo ANSSI"/>
       <div class="titre-site">
         <h1>MesServicesCyber <span class="beta">Bêta</span></h1>
