--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -2,11 +2,15 @@
 <html lang="{{ page.lang | default: site.lang | default: 'fr' }}">
 {% include head.html extra-css=layout.style extra-js=layout.script %}
 <body>
+
+{% if site.env.MATOMO_ID != undefined %}
+    {% include script-matomo.html %}
+{% endif %}
+
 <main>
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
 </main>
 </body>
-
 </html>
