[CORRECTION] Prend en compte les variables d'environnement vide

--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -3,7 +3,7 @@
 {% include head.html extra-css=layout.style extra-js=layout.script %}
 <body>
 
-{% if site.env.MATOMO_ID != undefined %}
+{% if site.env.MATOMO_ID != '' and site.env.MATOMO_ID != undefined %}
     {% include script-matomo.html %}
 {% endif %}
 
