Ajoute la page statique "à propos"

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="liens-internes">
-      <a href="#a" class="lien">À propos</a>
+      <a href="/aPropos" class="lien">À propos</a>
       <hr/>
       <a href="#a" class="lien">Mentions légales</a>
       <hr/>
