Ajoute la page des `mentions légales`

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -23,7 +23,7 @@
     <div class="liens-internes">
       <a href="/aPropos" class="lien">À propos</a>
       <hr/>
-      <a href="#a" class="lien">Mentions légales</a>
+      <a href="/mentionsLegales" class="lien">Mentions légales</a>
       <hr/>
       <a href="#a" class="lien">Politique de confidentialité</a>
       <hr/>
