Ajoute la page des `politique de confidentialité`
...en version mobile uniquement

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -25,7 +25,7 @@
       <hr/>
       <a href="/mentionsLegales" class="lien">Mentions légales</a>
       <hr/>
-      <a href="#a" class="lien">Politique de confidentialité</a>
+      <a href="/confidentialite" class="lien">Politique de confidentialité</a>
       <hr/>
       <a href="#a" class="lien">Conditions générales</a>
       <hr/>
