--- a/front/_layouts/page-statique.html
+++ b/front/_layouts/page-statique.html
@@ -5,6 +5,9 @@ style: /assets/styles/page-statique.css
 <section class="chapeau fond-sombre chapeau-page-statique">
   <div class="contenu-section">
     <h1>{{page.titrePageStatique}}</h1>
+    {% if page.sousTitrePageStatique %}
+    <p>{{page.sousTitrePageStatique}}</p>
+    {% endif %}
   </div>
 </section>
 
