--- a/front/assets/styles/page-statique.scss
+++ b/front/assets/styles/page-statique.scss
@@ -59,6 +59,10 @@
     }
 
     table {
+      @include a-partir-de(sm) {
+        border-collapse: collapse;
+      }
+
       thead {
         border: none;
         clip: rect(0 0 0 0);
@@ -68,6 +72,15 @@
         padding: 0;
         position: absolute;
         width: 1px;
+
+        @include a-partir-de(sm) {
+          width: unset;
+          height: unset;
+          clip: unset;
+          position: unset;
+          background-color: #f6f6f6;
+          overflow: unset;
+        }
       }
 
       tr {
@@ -77,6 +90,11 @@
         margin-bottom: 16px;
         position: relative;
 
+        @include a-partir-de(sm) {
+          display: table-row;
+          border: 1px solid #929292;
+        }
+
         &:after {
           content: '';
           position: absolute;
@@ -85,6 +103,10 @@
           left: 50%;
           height: 100%;
           width: 1px;
+
+          @include a-partir-de(sm) {
+            display: none;
+          }
         }
       }
 
@@ -97,10 +119,25 @@
         font-size: 0.875rem;
         line-height: 1.5rem;
 
+        @include a-partir-de(sm){
+          display: table-cell;
+        }
+
         &:before {
           content: attr(data-label);
           font-weight: bold;
           align-self: center;
+          @include a-partir-de(sm) {
+            display: none;
+          }
+        }
+      }
+
+      @include a-partir-de(sm) {
+        td, th {
+          border: 1px solid #929292;
+          padding: 12px 24px;
+          text-align: left;
         }
       }
     }
