[CORRECTION] Inclue l'icône de connexion dans la zone cliquable du lien

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -175,7 +175,7 @@ header {
       color: #000091;
     }
 
-    .profil-deconnecte:before {
+    .profil-deconnecte > a:before {
       content: url('/assets/images/icone-profil-non-connecte.svg');
     }
 
